chore: add tsdoc

--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -5,6 +5,10 @@
 		"rootDir": "./src",
 		"baseUrl": "."
 	},
+	"typedocOptions": {
+		"mode": "modules",
+		"out": "docs"
+	},
 	"exclude": [
 		"dist",
 		"test",
