--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,10 +14,11 @@
   "dependencies": {
     "@ableton-tools/core": "*",
     "boxen": "4.2.0",
-    "commander": "4.1.1",
     "chalk": "3.0.0",
+    "commander": "4.1.1",
     "log-symbols": "3.0.0",
     "ora": "4.0.3",
+    "typedoc": "^0.16.10",
     "update-notifier": "4.1.0"
   },
   "devDependencies": {
