--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "test": "jest",
     "build": "tsc --project ./tsconfig.json",
-    "prepublishOnly": "npm run build",
-    "docs": "typedoc --plugin typedoc-plugin-markdown"
+    "prepublishOnly": "npm run build"
   },
   "dependencies": {
     "archiver": "3.1.1",
@@ -26,8 +25,6 @@
     "@types/unzipper": "0.10.1",
     "jest": "25.1.0",
     "ts-jest": "25.2.0",
-    "typedoc": "0.16.10",
-    "typedoc-plugin-markdown": "2.2.16",
     "typescript": "3.7.5"
   },
   "repository": {
