test(core): use run in band option

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --runInBand",
     "build": "tsc --project ./tsconfig.json",
     "prepublishOnly": "npm run build"
   },
